# azhar_pather

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_helpers.h
.github/workflows/: cmake.yml
exercises/: measuringDistances.cpp  measuringDistances2.cpp  permutations.cpp
exercises/PathFinding/measuring-distances-II/: measuringDistances2_helpers.h
exercises/measuring-distances-I/: measuringDistances.cpp  measuringDistances_helpers.h
exercises/measuring-distances-II/: measuringDistances2.cpp  measuringDistances2_helpers.h
exercises/permutations/: permutations.cpp  permutations_helpers.h
exercises/templates/: README.md  templates.h
testing/: main_tests.cpp  measuringDistances2_tests.cpp  measuringDistances_tests.cpp  permutations_tests.cpp  solution.cpp
tests/: main_tests.cpp  measuringDistances2_test.cpp  measuringDistances_test.cpp  permutations_test.cpp  solution.cpp  templates_test.cpp
tutorial/sqlite/: basic_example.cpp
